--- a/independence_cup_2025.html
+++ b/independence_cup_2025.html
@@ -190,6 +190,14 @@
         All players and teams are requested to check the 
         <span class="font-semibold text-blue-900">Fixtures Tab</span> for details.
       </p>
+      <p class="mt-4 text-base text-blue-700 leading-relaxed">
+        🔴 <strong>Track matches in real-time!</strong><br>
+        Visit the 
+        <a href="live_score.html" class="text-blue-800 font-semibold underline hover:text-blue-900">
+          Live Score Page
+        </a> 
+        for live updates, scorers, standings & knockouts.
+      </p>
     </aside>
   </main>
 
